# Nexus

frontend/: .gitignore  app.json  package-lock.json  package.json  tsconfig.json
frontend/android/app/: build.gradle
frontend/api/: auth.ts  client.ts
frontend/app/: _layout.tsx  index.tsx  modal.tsx
frontend/app/(auth)/: _layout.tsx  login.tsx  onboarding.tsx
frontend/app/(tabs)/: _layout.tsx  chats.tsx  create.tsx  index.tsx  profile.tsx  tasks.tsx  wallet.tsx
frontend/app/bounty/: [id].tsx
frontend/app/create-bounty/: step1.tsx  step2.tsx  step3.tsx
frontend/app/modals/: file-upload.tsx  transactions.tsx  wallet-selector.tsx
frontend/app/settings/: index.tsx
frontend/app/submission/: [id].tsx
frontend/app/task/: [id].tsx  submit.tsx
frontend/app/test/: index.tsx
frontend/components/bounty/: BountyCard.tsx  CategoryCard.tsx  SubmissionCard.tsx
frontend/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Input.tsx  LoadingSpinner.tsx
frontend/constants/: colors.ts  env.ts  layout.tsx
frontend/contexts/: AuthContext.tsx  BountyContext.tsx  WalletContext.tsx
frontend/types/: index.ts
frontend/utils/: solana.ts  validation.ts
primary-backend/: .dockerignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  prisma.config.ts
primary-backend/prisma/: schema.prisma
primary-backend/src/: index.ts
primary-backend/src/config/: env.ts
rust-be/: Cargo.toml
rust-be/src/: crypto.rs  lib.rs  utils.rs
ws/: package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
ws/prisma/: schema.prisma
ws/src/: index.ts
(+32 files in other folders)
