[package]
name = "nexus-crypto"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"

# crypto
aes-gcm = "0.10"
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }

# randomness
getrandom = { version = "0.2", features = ["js"] }
rand_core = "0.6"
rand = "0.8"

# better JS interop
serde-wasm-bindgen = "0.5"
